# learnings-over-time-python

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
credit_intelligence_&_modelling/cap12_borrowed_measures/data/raw/: dataset_crediticio_realista.csv
credit_intelligence_&_modelling/cap12_borrowed_measures/notebooks/: ejercicio_practico_integracion.ipynb
credit_intelligence_&_modelling/cap12_borrowed_measures/presentaciones/: 12.1 Mathematics and Probability Theory.html  12.2 Probability Distributions and Hypotheses.html  12.3 Economics - Desigualdad del Riesgo.html  12.4 Information and Cryptography.html  12.5 signal_detection_theory.html  12.6 forecasting_presentation.html  cap 12 - borrowed_measures.html
credit_intelligence_&_modelling/cap13_practical_applications/: README.md  USAGE.md  requirements.txt
credit_intelligence_&_modelling/cap13_practical_applications/contenido/: cap13_credit_intelligence_modelling.md
credit_intelligence_&_modelling/cap13_practical_applications/data/raw/: lead_conversion_development.csv  lead_conversion_production.csv
credit_intelligence_&_modelling/cap13_practical_applications/notebooks/: 01_generate_synthetic_dataset.ipynb  02_credit_scoring_metrics_demonstration.ipynb
credit_intelligence_&_modelling/cap13_practical_applications/src/: __init__.py  credit_metrics.py
